Fixes heading font size on mobile devices

--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -428,13 +428,14 @@ h2 {
 
 .content > h1 {
     margin-top: 100px;
-    font-size: 35px;
+    font-size: 25px;
     line-height: 45px;
     margin-bottom: 0;
 }
 
 @media screen and (min-width: 800px) {
     .content > h1 {
+        font-size: 35px;
         margin-top: 180px; /* 130 fixed navigation + 50px (margin bottom) */
         margin-bottom: 0;
     }
